--- a/bife.html
+++ b/bife.html
@@ -72,7 +72,7 @@
 
     <center><h1>Bife</h1></center>
     <figure>
-      <center><img src="images/bife_02.jpg"
+      <center><img src="bife_02.jpg"
        alt="Fudbalski klub Zavarivac"
        width="600"
        height="450"
