--- a/zavarivac.html
+++ b/zavarivac.html
@@ -74,7 +74,7 @@
    <center><h1>Fudbalski klub "Zavarivac" </h1>      </center>                                                                                                                    
     
     <figure>
-      <center><img src="images/zavarivac_01.jpg"
+      <center><img src="zavarivac_01.jpg"
           alt="Fudbalski klub Zavarivac"
           width="800"
           height="450"
