--- a/zavarivac.html
+++ b/zavarivac.html
@@ -89,7 +89,7 @@
 
 <hr>
 <figure>
-   <center><img src="images/zavarivac_02.jpg"
+   <center><img src="zavarivac_02.jpg"
     alt="Fudbalski klub Zavarivac"
     width="800"
     height="450"
@@ -100,7 +100,7 @@
 
 <hr>
 <figure>
-   <center><img src="images/parking.jpg"
+   <center><img src="parking.jpg"
     alt="Fudbalski klub Zavarivac"
     width="425"
     height="450"
