--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <hr>
 <center><h1>Klisura</h1></center>
 <figure>
-<center><img src="images/klisura.jpg"
+<center><img src="klisura.jpg"
      alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
      width="850"
@@ -97,14 +97,14 @@
     <p>Moj suprug  Zoran  Trajkovic - rodjen je  u ovom divnom selu  <abbr title="Mozilla Developer network"><a href="klisura.html">Klisura</a></abbr> 30.11.1950 god.</p>
     <p> Zoran se  1953 god.  seli  iz Klisure   u grad Nis sa roditeljima i jednom sestrom, a druga sestra je rodjena 1954g. u Nisu. Odrastao i skolovao se u Nisu. Zavrsio je zanat  za elektro zavarivaca  i    Maasinskog   Tehnicara   Odsluzio je vojni rok u Benkovcu. Radio je u Masinskoj industriji, "Zavarivac"  Vranje,  "Galenika" Beograd  kao  tehnicki rukovodilac. Ozenio se krajem 1972g. sa Dobrila Vacic (samnom), izrodili smo dvoje dece. Deca su odrasla, skolovala se u Nisu, sin zavrsio Masinsku tehnicku skolu cetvrti stepen,  cerka Birotehnicku cetvrti  stpen. Sin odsluzio vojni  rok  pored mora u Bar. Cerka  je zasnovala porodicu  1998g. ima dvoje dece, sin  je zasnovao porodicu  2007g. ima troje dece. 
  <center><h2>Zoranov hobi  - RIBOLOV  </h2></center>                                                                                                                                     <p>Moj suprug, iako  je  ziveo u Nisu, obozavao je  selo gde je rodjen . Svo slobodno vreme  voleo  je  da provede u rodno selo  i pored reke Morave na pecanju.    </p>   
- <center><img class="center" src="images/tata.jpg"
+ <center><img class="center" src="tata.jpg"
  alt="The head and torso of a dinosaur skeleton;
       it has a large head with long sharp teeth"
  width="200"
  height="200"
  title="Zoran"> </center>                                                                                                                        <p>Kad smo se upoznali  rekao mi je da cesto ide u ribolov,  voli da peca rube  jer je rodjen pored reke Morave.  Od  moje brace niko nije bio ribolovac jer mi nemamo veliku reku,  samo imamo dva mala potoka.  Kad je  prvi put doneo upecane rube kuci zive,  ja nisam smela ni da ih pipnem niti sam znala  kako da ih ocistim. Posto su tada  Zoran i nas kucni prijatelj Andra   upecali te ribe,  Andrina supruga Mimica   mi pokazala  kako   se to radi. Bile su sitne beavice i jos neke krupnije. Ocistila sam tada nekako i isprzila. Uvek smo sveze ribe jeli jer su ukusnije nego iz zamrzivaca. Isao je stalno u ribolov obicno vikendom u ranu zoru.                                                                                                                                       Preko leta Andra i Mimica su cesto kampovali pored reke Morave negde kod Batusinca I  pecali ribe. Zoran ih je posecivao na kampovanju  i pecali su ribe zajedno  sa jos nekim prijateljima  dok je bio momak,  a posle smo ih zajedno posecivali pored reke.   </p>
 <figure>
- <center><img class="center" src="images/andra.jpg"
+ <center><img class="center" src="andra.jpg"
      alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
      width="600"
