--- a/bife.html
+++ b/bife.html
@@ -86,7 +86,7 @@
     <hr>
     
      <figure>
-        <center><img src="images/bife_01.jpg"
+        <center><img src="bife_01.jpg"
          alt="Fudbalski klub Zavarivac"
          width="650"
          height="450"
