--- a/crkva.html
+++ b/crkva.html
@@ -81,7 +81,7 @@
 <body>
     <center><h1>Crkva</h1></center>
     <figure>
-        <center><img src="images/crkva.jpg"
+        <center><img src="crkva.jpg"
              alt="The head and torso of a dinosaur skeleton;
                   it has a large head with long sharp teeth"
              width="400"
@@ -94,7 +94,7 @@
 <hr>
     
         <figure>
-            <center><img src="images/ispred_crkve.jpg"
+            <center><img src="ispred_crkve.jpg"
                  alt="The head and torso of a dinosaur skeleton;
                       it has a large head with long sharp teeth"
                  width="600"
