--- a/kavezi.html
+++ b/kavezi.html
@@ -79,7 +79,7 @@
 <body>
     <center><h1>Kavezi</h1></center>
     <figure>
-        <center><img src="images/kavez_za_nosilje.jpg"
+        <center><img src="kavez_za_nosilje.jpg"
              alt="The head and torso of a dinosaur skeleton;
                   it has a large head with long sharp teeth"
              width="700"
@@ -93,7 +93,7 @@
     
         <hr>
         <figure>
-            <center><img src="images/kavez_za_ptice.jpg"
+            <center><img src="kavez_za_ptice.jpg"
                  alt="The head and torso of a dinosaur skeleton;
                       it has a large head with long sharp teeth"
                  width="700"
@@ -103,7 +103,7 @@
             </figure> 
             <hr>
             <figure>
-                <center><img src="images/kavezi_baterija.jpg"
+                <center><img src="kavezi_baterija.jpg"
                      alt="The head and torso of a dinosaur skeleton;
                           it has a large head with long sharp teeth"
                      width="350"
