--- a/klisura.html
+++ b/klisura.html
@@ -72,7 +72,7 @@
     <center><h1>Klisura</h1></center>
 
     <figure>
-      <center><img src="images/morava.jpg"
+      <center><img src="morava.jpg"
           alt="The head and torso of a dinosaur skeleton;
                it has a large head with long sharp teeth"
           width="650"
