--- a/korvin_grad.html
+++ b/korvin_grad.html
@@ -72,7 +72,7 @@
 <body>
     <center><h1>Korvin grad</h1></center>
     <figure>
-      <center><img src="images/korvin_grad_01.jpg"
+      <center><img src="korvin_grad_01.jpg"
           alt="The head and torso of a dinosaur skeleton;
                it has a large head with long sharp teeth"
           width="400"
