--- a/krst.html
+++ b/krst.html
@@ -84,7 +84,7 @@
     <center><h1>Osvestenje krsta</h1></center>
 
     <figure>
-        <center><img src="images/tabla.jpg"
+        <center><img src="tabla.jpg"
              alt="Tabla sa spiskom ljudi"
              width="600"
              height="450"
@@ -97,7 +97,7 @@
     
         <hr>
         <figure>
-            <center><img src="images/hrast.jpg"
+            <center><img src="hrast.jpg"
                  alt="Tabla sa spiskom ljudi"
                  width="600"
                  height="450"
