--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
      alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
      width="850"
-     height="450"
+     height="450" style="width:auto"
      title="Panorama Klisure"></center>
      <figcaption><center>Selo Klisura</center></figcaption>
 </figure>
