--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Milan</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+     
      ul {
        list-style-type: none;
        margin: 0;
@@ -85,7 +86,7 @@
      alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
      width="850"
-     height="450" style="width:auto"
+     height="450" 
      title="Panorama Klisure"></center>
      <figcaption><center>Selo Klisura</center></figcaption>
 </figure>
@@ -105,8 +106,7 @@
  title="Zoran"> </center>                                                                                                                        <p>Kad smo se upoznali  rekao mi je da cesto ide u ribolov,  voli da peca rube  jer je rodjen pored reke Morave.  Od  moje brace niko nije bio ribolovac jer mi nemamo veliku reku,  samo imamo dva mala potoka.  Kad je  prvi put doneo upecane rube kuci zive,  ja nisam smela ni da ih pipnem niti sam znala  kako da ih ocistim. Posto su tada  Zoran i nas kucni prijatelj Andra   upecali te ribe,  Andrina supruga Mimica   mi pokazala  kako   se to radi. Bile su sitne beavice i jos neke krupnije. Ocistila sam tada nekako i isprzila. Uvek smo sveze ribe jeli jer su ukusnije nego iz zamrzivaca. Isao je stalno u ribolov obicno vikendom u ranu zoru.                                                                                                                                       Preko leta Andra i Mimica su cesto kampovali pored reke Morave negde kod Batusinca I  pecali ribe. Zoran ih je posecivao na kampovanju  i pecali su ribe zajedno  sa jos nekim prijateljima  dok je bio momak,  a posle smo ih zajedno posecivali pored reke.   </p>
 <figure>
  <center><img class="center" src="andra.jpg"
-     alt="The head and torso of a dinosaur skeleton;
-          it has a large head with long sharp teeth"
+     alt="Andra i Mimica"
      width="600"
      height="400"
      title="Andra">
