--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 <center><h1>Klisura</h1></center>
 <figure>
 <center><img src="klisura.jpg"
-     alt="The head and torso of a dinosaur skeleton;
-          it has a large head with long sharp teeth"
+     alt="Panorama Klisure"
      width="850"
      height="450" 
      title="Panorama Klisure"></center>
