--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="krst.html" class="item">Krst</a>
   <a href="bife.html" class="item">Bife</a>
   <a href="kavezi.html" class="item">Kavezi</a>
-  <a href="zavarivac.html" class="last-item">FK Zavarivac</a>
+  <a href="zavarivac.html" class="item">FK Zavarivac</a>
 </div>
 
 <hr>
