--- a/kavezi.html
+++ b/kavezi.html
@@ -111,6 +111,12 @@
                      height="350"
                      title="Panorama Klisure"></center>
                      <figcaption><center>Baterija za koke nosilje</center></figcaption>
-                </figure>            
+                </figure>   
+          
+                <p>
+                  <a href="#">Povratak na vrh</a>
+                </p>
+                
+
 </body>
 </html>
