--- a/zavarivac.html
+++ b/zavarivac.html
@@ -94,7 +94,7 @@
     alt="Fudbalski klub Zavarivac"
     width="800"
     height="450"
-    title="FK Zavarivace"></center>
+    title="FK Zavarivac"></center>
     <figcaption><center>FK Zavarivac</center></figcaption>
 </figure>
    
@@ -105,9 +105,42 @@
     alt="Fudbalski klub Zavarivac"
     width="425"
     height="450"
-    title="FK Zavarivace"></center>
+    title="FK Zavarivac"></center>
     <figcaption><center>Mrki, Zoran i Novica</center></figcaption>
 </figure>
+
+<hr>
+<figure>
+   <center><img src="fknovo01.jpg"
+    alt="Fudbalski klub Klisura"
+    width="550"
+    height="450"
+    title="Fudbalski klub Klisura"></center>
+    <figcaption><center>FK Klisura naslednica FK Zavarivaca</center></figcaption>
+</figure>
+
+<hr>
+<figure>
+   <center><img src="fknovo02.jpg"
+    alt="Fudbalski klub Klisura"
+    width="600"
+    height="400"
+    title="Fudbalski klub Klisura"></center>
+    <figcaption><center>FK Klisura sa upravom</center></figcaption>
+</figure>
+
+<hr>
+<figure>
+   <center><img src="fknovo03.jpg"
+    alt="Fudbalski klub Klisura"
+    width="600"
+    height="400"
+    title="Fudbalski klub Klisura"></center>
+    <figcaption><center>FK Klisura 2019.godine</center></figcaption>
+</figure>
+
+
+
 <p>
   <a href="#">Povratak na vrh</a>
 </p>
