--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
      <a href="vikendica.html">Vikendica</a>
 
   </li>
-    
+  <li>
+    <a href="new.html">New</a>
+
+ </li>  
 
 </ul>
 </nav>
